WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13782
REGRESSION (
r21528
-
r21533
): Failing editing/selection/drag-in-iframe in pixel mode
https://bugs.webkit.org/show_bug.cgi?id=13782
Summary
REGRESSION (r21528-r21533): Failing editing/selection/drag-in-iframe in pixel...
mitz
Reported
2007-05-18 14:00:43 PDT
editing/selection/drag-in-iframe.html is a pixel-only test for rendering the drag-caret in an iframe. It is failing in TOT, although when following the instructions manually the drag-caret is visible as expected.
Attachments
Fix for bug
(11.45 KB, patch)
2007-05-18 18:47 PDT
,
Oliver Hunt
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2007-05-18 18:47:58 PDT
Created
attachment 14618
[details]
Fix for bug Whoops, the
r21533
patch required holding on to a DOMElement for the duration of the drag in order to produce promised content. To avoid keeping an entire Document around ad infinitum i explicitly cleared the pasteboard after the drag. This doesn't work well with DRT, and tim suggests other apps may behave similarly to DRT, so i've removed the pastebaord clearing. Most of this patch is basically replacing a domelement reference with the underlying CachedImage instead.
Oliver Hunt
Comment 2
2007-05-18 19:29:49 PDT
Fix landed
r21596
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug