WebKit/WebView/WebHTMLViewInternal.h
@@ -36,6 +36,7 @@
 
 namespace WebCore {
     class KeyboardEvent;
+    class CachedImage;
 }
 
 struct WebHTMLViewInterpretKeyEventsParameters;
@@ -90,7 +91,7 @@ struct WebHTMLViewInterpretKeyEventsParameters;
     NSTextView *firstResponderTextViewAtMouseDownTime;
     
     WebDataSource *dataSource;
-    DOMElement *promisedDragTIFFDataSource;
+    WebCore::CachedImage *promisedDragTIFFDataSource;
 }
 - (void)clear;
 @end
@@ -120,5 +121,7 @@ struct WebHTMLViewInterpretKeyEventsParameters;
 - (void)setGrammarCheckingEnabled:(BOOL)flag;
 - (void)toggleGrammarChecking:(id)sender;
 #endif
+- (WebCore::CachedImage*)promisedDragTIFFDataSource;
+- (void)setPromisedDragTIFFDataSource:(WebCore::CachedImage*)source;
 @end
 
